# wmpf-debugger-rust

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  README.zh.md  build.rs
.github/workflows/: ci.yml  release.yml
frida/: hook.js
frida/config/: addresses.11581.json  addresses.11633.json  addresses.13331.json  addresses.13341.json  addresses.13487.json  addresses.13639.json  addresses.13655.json  addresses.13871.json  addresses.13909.json  addresses.14161.json  addresses.14185.json  addresses.14199.json  addresses.14315.json  addresses.14327.json  addresses.16133.json  addresses.16203.json  addresses.16389.json  addresses.16467.json  addresses.16771.json  addresses.16815.json  addresses.16965.json  addresses.17037.json  addresses.17071.json  addresses.17127.json  addresses.18055.json  addresses.18151.json  addresses.18787.json  addresses.18891.json  addresses.18955.json  addresses.19027.json  addresses.19201.json  addresses.19339.json  addresses.19459.json  addresses.19481.json  addresses.19749.json  addresses.19769.json  addresses.19823.json  addresses.19841.json  addresses.19871.json  addresses.19881.json  (+5 more)
proto/: wa_remote_debug.proto
src/: cli.rs  codex.rs  constants.rs  debug_server.rs  frida_ffi.rs  frida_server.rs  logger.rs  main.rs  proto.rs  proxy_server.rs
